404 page element not showing - fixed

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -32,7 +32,7 @@ body {
 		}
 
 .line-bg {
-	    float:left;
+	    float:left
 	    position:relative;
 		width:100%;
 		height:100%;
